<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeSelection">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/i"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/i"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dash1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/dash"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/c2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dash2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/dash"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/o"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1.1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/o"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/e"
            android:textColor="@color/red"
            android:textSize="22sp" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/select_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/walk" />

    <TextView
        android:id="@+id/select_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/virgo"
        android:letterSpacing="0.1"
        android:text="@string/select_mode"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:text="@string/can_you_beat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_mode" />

    <TextView
        android:id="@+id/textline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:text="@string/be_wary"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textline1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textline2">

        <Button
            android:id="@+id/takeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/virgo"
            android:text="@string/takeo" />

        <Button
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/virgo"
            android:text="@string/friend" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>