<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dialog_takeo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-4dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_dialog_takeo" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:letterSpacing="0.1"
            android:text="@string/pick"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_o"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/apple"
                android:contentDescription="@string/o"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:soundEffectsEnabled="true"
                app:srcCompat="@drawable/ic_o"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/button_x"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/apple"
                android:contentDescription="@string/x"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:soundEffectsEnabled="true"
                app:srcCompat="@drawable/ic_x" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/x_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/virgo"
                android:text="@string/x"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="serif"
                android:letterSpacing="0.04"
                android:text="@string/first_move"
                android:textColor="@color/black"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>