<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-4dp"
        android:contentDescription="@string/description" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/virgo"
                android:text="@string/exit"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/virgo"
                android:text="@string/reset"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>