<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamescreen_background"
    tools:context=".GameScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/i"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/i"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dash1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/dash"
            android:textColor="@color/black_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/c2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dash2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/dash"
            android:textColor="@color/black_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/o"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1.1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/o"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/virgo"
            android:gravity="center"
            android:text="@string/e"
            android:textColor="@color/white_fixed"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/player_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/virgo"
        android:letterSpacing="0.1"
        android:textColor="@color/white_fixed"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/game_board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/description"
                android:elevation="8dp"
                android:padding="16dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginBottom="108dp"
        android:layout_weight="1"
        android:backgroundTint="@color/black_fixed"
        android:fontFamily="@font/virgo"
        android:text="@string/reset"
        android:textColor="@color/white_fixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_board" />
</androidx.constraintlayout.widget.ConstraintLayout>